// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alter Color plugin should process a complex file correctly 1`] = `
"
body {
  color: white;
  background: #556832;
}

#article {
  color: #cccccc;
  border: solid 1px rgba(0,0,0,0.4);
}

.p {
  color: #ccc;
  border: solid 1px #556832;
  background: rgb(0,50,0) 0 0 no-repeat;
}

circle {
  fill: #556832;
}

@media screen and (min-width: 480px) {
  body {
    color: yellow;
    background-color: hsla(0,0%,0%,0.5);
    border: solid #556832 1px;
  }
}
"
`;

exports[`Alter Color plugin should process a complex file correctly while preserving alpha channel 1`] = `
"
body {
  color: white;
  background: #556832;
}

#article {
  color: #cccccc;
  border: solid 1px rgba(85,104,50,0.4);
}

.p {
  color: #ccc;
  border: solid 1px #556832;
  background: rgb(0,50,0) 0 0 no-repeat;
}

circle {
  fill: #556832;
}

@media screen and (min-width: 480px) {
  body {
    color: yellow;
    background-color: hsla(81,35%,30%,0.5);
    border: solid #556832 1px;
  }
}
"
`;
